<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Eservia</string>
    <string name="facebook_app_id" translatable="false">2743688072604496</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2743688072604496</string>
   <string name="server_client_id" translatable="false">508904733580-k8r3schu6se4fjsj3boid3h5lm8e5glc.apps.googleusercontent.com</string>
    <string name="secret_id" translatable="false">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</string>
    <string name="geo_api_key" translatable="false">AIzaSyBRsw-k_ieBHgO6515IxR5zyh9xIRWfpVM</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_account_setup">Account Setup</string>
    <string name="title_activity_reset_password">Restore Password</string>
    <string name="title_activity_request_restore_code">Restore Password</string>
    <string name="title_activity_register_phone">Registration</string>
    <string name="title_activity_account_setup_business">Account Setup</string>
    <string name="title_activity_profile_settings"> Profile </string>
    <string name="title_activity_change_user_info"> Profile </string>
    <string name="title_activity_change_password"> Password </string>
    <string name="title_activity_phone_approve"> Confirmation </string>
    <string name="title_activity_main"> Categories </string>
    <string name="title_activity_search"> Search </string>
    <string name="title_activity_places"> Establishments </string>
    <string name="title_activity_reservation"> Booking </string>
    <string name="title_activity_add_service"> Add service </string>
    <string name="title_activity_services"> Services </string>
    <string name="title_activity_address_choose_address">Select department</string>
    <string name="title_activity_masters"> Master </string>
    <string name="title_activity_addresses"> Branch </string>
    <string name="title_activity_business_page"> Establishment </string>
    <string name="title_activity_my_bookings"> My bookings </string>
    <string name="title_activity_booking_detail"> Booking </string>
    <string name="title_activity_business_comments"> Reviews </string>
    <string name="title_activity_work_days"> Timetable </string>
    <string name="title_activity_image_viewer"> </string>
    <string name="title_activity_contacts"> Contacts </string>
    <string name="title_activity_eservia_feedback"> Write to us </string>
    <string name="title_activity_add_comment"> Write a review </string>
    <string name="title_activity_business_filter"> Filter </string>
    <string name="title_activity_map"> Map </string>
    <string name="logo"> Logo </string>
    <string name="account_picture"> Profile Avatar </string>
    <string name="close"> Close </string>
    <string name="email_hint">Email</string>
    <string name="phone_hint"> Phone number </string>
    <string name="phone_or_email_hint">Email or cellphone</string>
    <string name="password_hint"> Password </string>
    <string name="confirm_pass"> Confirm password</string>
    <string name="create_password_hint"> Create a password </string>
    <string name="signIn_btn">Sign In</string>
    <string name="registration_btn">Create account</string>
    <string name="or_label"> or </string>
    <string name="google_login_btn"> Sign in with Google </string>
    <string name="facebook_login_btn"> Sign in with Facebook </string>
    <string name="login_failed"> Sign in failed </string>
    <string name="register_failed"> Failed to register </string>
    <string name="check_out_name_password"> Verify your username and password. </string>
    <string name="check_out_email_password"> Check your mail and password correctly. </string>
    <string name="wrong_login_password">Incorrect login or password. Please, try again.</string>
    <string name="try_again"> Try again </string>
    <string name="do_another_attempt"> Retry </string>
    <string name="forgot_password">Forgot password?</string>
    <string name="recover_password">Recover password</string>
    <string name="accept"> OK </string>
    <string name="reset_pass_message">Enter your email address and we\'ll send you a new temporary password.</string>
    <string name="recover_password_success">Password was recovered</string>
    <string name="reset_pass"> Restore Password </string>
    <string name="reset_pass_failed">Failed to send an email</string>
    <string name="authenticating">Entering&#8230;</string>
    <string name="creating_account">Creating a profile&#8230;</string>
    <string name="accept_license">By registering, you agree with</string>
    <string name="and">and</string>
    <string name="termsOfUseLabel">Terms of use</string>
    <string name="policyLabel">Privacy policy</string>
    <string name="account"> Profile </string>
    <string name="all_next"> Next </string>
    <string name="complete"> Done </string>
    <string name="add_photo"> ADD PHOTO </string>
    <string name="change_photo"> Edit photo </string>
    <string name="image_not_picked"> The file is not selected </string>
    <string name="email"> Email </string>
    <string name="name"> Name </string>
    <string name="middle_name"> Middle name </string>
    <string name="middle_name_not_required"> Middle name (not necessary) </string>
    <string name="email_not_required">Email (not necessary)</string>
    <string name="surname"> Last Name </string>
    <string name="phone"> Phone number </string>
    <string name="phone_"> Phone number</string>
    <string name="preferred_language"> Language </string>
    <string name="verification"> Confirmation </string>
    <string name="verification_code"> Verification code </string>
    <string name="verification_message"> Enter code.</string>
    <string name="send_again"> SEND AGAIN </string>
    <string name="confirm">Confirm</string>
    <string name="sms_was_sent">"SMS code sent"</string>
    <string name="edit_profile"> Edit profile </string>
    <string name="change_password"> Change password </string>
    <string name="not_selected"> Not selected </string>
    <string name="add_photo_business"> ADD TO LOGO BUSINESS </string>
    <string name="business_category"> Business Category </string>
    <string name="name_business"> Business Name </string>
    <string name="description_business"> Business Description </string>
    <string name="city"> City </string>
    <string name="address"> Address </string>
    <string name="street"> Street </string>
    <string name="house"> House </string>
    <string name="err_big_image">The picture is too large</string>
    <string name="err_small_image">The picture is too small</string>
    <string name="change_account">Change account</string>
    <string name="attach_google">Attach Google account</string>
    <string name="detach_google">Detach Google account</string>
    <string name="attach_facebook">Attach Facebook account</string>
    <string name="detach_facebook">Detach Facebook account</string>
    <string name="approve_email">Confirm email</string>
    <string name="save_email">Save new email</string>
    <string name="email_approved">Email confirmed</string>
    <string name="sent_email_confirm_message">A confirmation link has been sent to your email</string>
    <string name="profile_updated">Profile was updated</string>
    <string name="profile_register_provider_success">Account was successfully attached</string>
    <string name="profile_remove_provider_success">Account was successfully detached</string>
    <string name="password_updated">Password was updated</string>
    <string name="password"> Password </string>
    <string name="change"> Edit </string>
    <string name="current"> Current </string>
    <string name="current_password"> Current password </string>
    <string name="new_"> New </string>
    <string name="new_password"> New password </string>
    <string name="approve"> Confirm </string>
    <string name="approve_phone"> Confirm number </string>
    <string name="new_password_again"> New password again </string>
    <string name="name_surname"> Name and Surname </string>
    <string name="my_reservations"> My Bookings </string>
    <string name="profile_settings"> Profile Settings </string>
    <string name="profile"> Profile </string>
    <string name="app_settings"> Settings </string>
    <string name="contacts">Contacts</string>
    <string name="logout">Logout</string>
    <string name="all">All</string>
    <string name="all_establishments">All establishments</string>
    <string name="favorite">Favorites</string>
    <string name="new_ones">New</string>
    <string name="vip"> VIP </string>
    <string name="most_popular">Most Popular</string>
    <string name="popular_establishments">Popular establishments</string>
    <string name="beauty"> Beauty </string>
    <string name="medicine"> Medicine </string>
    <string name="health">Health</string>
    <string name="sport"> Sport </string>
    <string name="restaurants"> Restaurants </string>
    <string name="entertainment"> Entertainment </string>
    <string name="shopping"> Shopping </string>
    <string name="auto_business"> Auto Business </string>
    <string name="real_estate"> Real estate </string>
    <string name="other"> Other </string>
    <string name="success_send_eservia_feedback">Thanks for your feedback</string>
    <string name="success_send_business_feedback">Thanks for your feedback</string>
    <string name="success_delete_business_feedback">Feedback was removed</string>
    <string name="reload">Reload</string>
    <string name="updates_dialog_title">Updates time!</string>
    <string name="updates_dialog_message">You\'re using an outdated %1$s version that is no longer supported. Please update the application to make bookings even more conveniently!</string>
    <string name="updates_dialog_btn_update">Update %1$s</string>
    <string name="rate_us_dialog_title">Rate %1$s</string>
    <string name="rate_us_dialog_message">If you enjoy using %1$s, please take a moment to rate it. Thanks for your support!</string>
    <string name="rate_us_dialog_btn_positive">Rate</string>
    <string name="rate_us_dialog_btn_negative">No, thanks</string>
    <string name="rate_us_dialog_btn_neutral">Later</string>
    <string name="sort_type"> Sort </string>
    <string name="filter">Filter</string>
    <string name="map">Map</string>
    <string name="has_several_departments"> Several departments </string>
    <string name="has_not_any_departments"> Haven`t any departments </string>
    <string name="departments_">%1$d departments</string>
    <string name="by_name_asc"> By Name (ASC) </string>
    <string name="by_name_desc"> By Name (DESC) </string>
    <string name="by_rating_asc"> By rating (from lower) </string>
    <string name="access_error"> Access Error </string>
    <string name="you_should_visit"> You should visit the institution to be able to write a review. </string>
    <string name="clearly"> Clearly </string>
    <string name="your_message_theme"> The theme of your message </string>
    <string name="your_message"> Your message </string>
    <string name="all_name">Name</string>
    <string name="institution_name">Institution name</string>
    <string name="specify_the_city">Specify the city</string>
    <string name="address_of_the_institution">Address of the institution</string>
    <string name="feedback_theme_hint">Theme&#8230;</string>
    <string name="feedback_message_hint">Message&#8230;</string>
    <string name="current_password_hint">Current&#8230;</string>
    <string name="new_password_hint">New&#8230;</string>
    <string name="new_password_again_hint">New again&#8230;</string>
    <string name="visit_duration">Visit duration</string>
    <string name="optional">Optional</string>
    <string name="time_of_stay_in_the_institution">Time of stay in the institution</string>
</resources>