<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlCardHolderPassword"
    style="@style/CommonCardHolderStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/window_left_right_margins"
    android:layout_marginTop="10dp"
    android:layout_marginRight="@dimen/window_left_right_margins"
    android:layout_marginBottom="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvContainerPassword"
        style="@style/CommonCardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rlCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/tvCurrentPasswordLabel"
                    style="@style/CommonInputLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="3dp"
                    android:text="@string/current_password" />

                <EditText
                    android:id="@+id/etCurrentPassword"
                    style="@style/CommonEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvCurrentPasswordLabel"
                    android:autofillHints=""
                    android:hint="@string/current_password_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:text=""
                    android:textColorHint="#757575"
                    tools:ignore="TouchTargetSizeCheck" />

            </RelativeLayout>

            <View
                style="@style/CommonSeparatorStyle"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/rlCurrentPassword" />

            <RelativeLayout
                android:id="@+id/rlNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlCurrentPassword"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/tvNewPasswordLabel"
                    style="@style/CommonInputLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="3dp"
                    android:text="@string/new_password" />

                <EditText
                    android:id="@+id/etNewPassword"
                    style="@style/CommonEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvNewPasswordLabel"
                    android:autofillHints=""
                    android:hint="@string/new_password_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:text=""
                    android:textColorHint="#757575"
                    tools:ignore="TouchTargetSizeCheck" />

            </RelativeLayout>

            <View
                style="@style/CommonSeparatorStyle"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/rlNewPassword" />

            <RelativeLayout
                android:id="@+id/rlNewPasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlNewPassword"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/tvNewPasswordAgainLabel"
                    style="@style/CommonInputLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="3dp"
                    android:text="@string/new_password_again" />

                <EditText
                    android:id="@+id/etNewPasswordAgain"
                    style="@style/CommonEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvNewPasswordAgainLabel"
                    android:autofillHints=""
                    android:hint="@string/new_password_again_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text=""
                    android:textColorHint="#757575"
                    tools:ignore="TouchTargetSizeCheck" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
