<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlCardHolderContact"
    style="@style/CommonCardHolderStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/window_left_right_margins"
    android:layout_marginTop="10dp"
    android:layout_marginRight="@dimen/window_left_right_margins"
    android:layout_marginBottom="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvContainerContact"
        style="@style/CommonCardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rlTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/tvThemeLabel"
                    style="@style/CommonInputLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="3dp"
                    android:text="@string/your_message_theme"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/etTheme"
                    style="@style/CommonEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvThemeLabel"
                    android:autofillHints=""
                    android:hint="@string/feedback_theme_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text=""
                    android:textColorHint="#757575"
                    android:textSize="@dimen/text_size_medium"
                    tools:ignore="TouchTargetSizeCheck" />

            </RelativeLayout>

            <View
                style="@style/CommonSeparatorStyle"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/rlTheme" />

            <RelativeLayout
                android:id="@+id/rlMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlTheme"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/tvMessageLabel"
                    style="@style/CommonInputLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="3dp"
                    android:text="@string/your_message"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/etMessage"
                    style="@style/CommonEditTextMultilineStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvMessageLabel"
                    android:autofillHints=""
                    android:hint="@string/feedback_message_hint"
                    android:imeOptions="actionDone"
                    android:text=""
                    android:textColorHint="#757575" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
