<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlCardHolderVisitDuration"
    style="@style/CommonCardHolderStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/window_left_right_margins"
    android:layout_marginTop="11dp"
    android:layout_marginRight="@dimen/window_left_right_margins"
    android:layout_marginBottom="11dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvVisitDurationContainer"
        style="@style/CommonCardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tvVisitDurationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="0dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
                android:maxLines="1"
                android:text="@string/visit_duration"
                android:textAllCaps="true"
                android:textColor="#363938"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/tvVisitDurationOptionalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="14dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
                android:maxLines="1"
                android:text="@string/optional"
                android:textAllCaps="false"
                android:textColor="#bdbdbd"
                android:textSize="@dimen/text_size_small"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/ivVisitDurationSelectIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@+id/tvVisitDurationTitle"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:src="@drawable/ic_service_time_booking_beauty"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:id="@+id/tvVisitDurationDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvVisitDurationTitle"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/ivVisitDurationSelectIcon"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
                android:maxLines="1"
                android:text="@string/time_of_stay_in_the_institution"
                android:textAllCaps="false"
                android:textColor="#757575"
                android:textSize="@dimen/text_size_medium" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
